<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <POU Name="Lavagem" Id="{c5f5a6f4-2be9-4d7a-9ec9-3cb4c368eeee}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Lavagem
VAR_INPUT
	AtivaBloco	:BOOL;	//É acionado quando a linha selecionada é igual a linha definida no programa
	Linha		:INT;	//Linha que o bloco está instanciado
	Status_V1	:INT; //Status da válvula V1
	Status_V2	:INT; //Status da válvula V2
	Status_V3	:INT; //Status da válvula V3
	Status_V4	:INT; //Status da válvula V4
	Status_ValvAguaLimpa:INT; //Status da válvula de água limpa
	Status_ValvAguaResid:INT; //Status da válvula de água residual
	AlarmeBomba	:BOOL; //Alarme da bomba de dosagem
	
	FT_CA	:REAL; //Leitura da vazão após a bomba
	FT_TR	:REAL; //Leitura da vazão antes do tambor
	
END_VAR
VAR_OUTPUT
	Status:INT; //1: Erro nas válvulas, 2: Erro na bomba, 3: Pronto para lavar, 4: Lavando
	Abre_V1:BOOL; //Abre válvula V1
	Abre_V2:BOOL; //Abre válvula V2
	Abre_V3:BOOL; //Abre válvula V3
	Abre_V4:BOOL; //Abre válvula V4
	AguaLimpa:BOOL; //Abre válvula de água limpa
	AguaResid:BOOL; //Abre válvula de água residual
	LigaBombaCW:BOOL; // Aciona bomba em sentido normal
	LigaBombaCCW:BOOL; //Aciona a bomba em sentido contrário
	stStatus:STRING;
	Lavando:BOOL;
	UltimaLav		:LINT;
END_VAR
VAR
	ParaLavagem:BOOL; //Comando para parar a lavagem
	IniciaLavagem:BOOL; //Comando para iniciar a lavagem
	SwitchCase :INT:=0; //Variável para iteração no case
	TON1_Lavagem: TON; //Temporizador 1
	TON2_Lavagem: TON; //Temporizador 2
	TON3_Lavagem: TON; //Temporizador 3
	TON4_Lavagem: TON; //Temporizador 4
	TON5_Lavagem: TON; //Temporizador 5
	TON6_Lavagem: TON;	//Temporizador 6
	QntLavResid: INT := 0; //Quantidade de lavagens feitas com água residual
	QntLavLimpa: INT := 0; //Quantidade de lavagens feitas com água limpa
	TempoTotal:REAL;		//Cálculo do tempo total da lavagem
	TempoAtual:REAL;		//Tempo decorrido da lavagem atual
	PorcentLavagem	:REAL;	//percentual de conclusão da lavagem
	TONR6_Lavagem	:TONR;	//Temporizador retentivo
END_VAR
VAR PERSISTENT
	Config:DUT_ConfigLavagem; //Variável com as configurações de lavagem
	UltimaLavagem	:UDINT;	//Data e hora da última lavagem - //Estão como UDINT para a correta conversão na IHM
	IntervLavagem	:UDINT;	//Intervalo entre lavagens (h)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[UltimaLav := UltimaLavagem;

//Se o alarme lavagem subir, o próximo alarme da mesma linha será no próximo intervalo
(*
IF IntervaloLavCalibr.AlarmeLavagem AND IntervaloLavCalibr.LinhaLavagem = Linha THEN
	UltimaLavagem := DT_TO_UDINT(Main.HoraAtual);
END_IF*)

//Status da lavagem
IF Status_V2 = 6 OR Status_V3 = 6 OR Status_V4 = 6 OR Status_ValvAguaLimpa = 6 OR Status_ValvAguaResid = 6 OR TON5_Lavagem.Q THEN
	Status := 1; // Problema nas válvulas
	stStatus := 'FALHA NO POSICIONAMENTO DAS VÁLVULAS';
ELSIF AlarmeBomba THEN
	Status := 2; //Problema na bomba
	stStatus := 'PROBLEMA NA BOMBA';
ELSIF (Config.LavAguaLimpa <= 0 AND Config.LavAguaUsada <= 0) OR (Config.TempoDeCiclo) <= 0 THEN
	Status := 7; //Problema nas configurações do ciclo
	stStatus := 'PROBLEMA NAS CONFIGURAÇÕES DO CICLO';
ELSIF SwitchCase = 0 THEN
	Status := 3; //Pronto para iniciar lavagem
	stStatus := 'PRONTO PARA INICIAR LAVAGEM';
ELSIF SwitchCase > 0 AND SwitchCase < 30 THEN
	Status := 4; //Lavagem com água residual
	stStatus := 'LAVANDO COM ÁGUA RESIDUAL';
ELSIF SwitchCase >= 30 AND SwitchCase < 42 THEN
	Status := 5; //Lavagem com água limpa
	stStatus := 'LAVANDO COM ÁGUA LIMPA';
ELSE
	Status := 6; //Finalizando lavagem
	stStatus := 'FINALIZANDO LAVAGEM';
END_IF;
/// Colocar o que falta para iniciar a lavagem

//Cálculo do tempo total de lavagem
TempoTotal := DINT_TO_REAL(2 * (Config.TempoDeCiclo + 1) * ( Config.LavAguaLimpa + Config.LavAguaUsada)) + TIME_TO_REAL(TON4_Lavagem.PT/1000);
TempoAtual := (TIME_TO_REAL(TONR6_Lavagem.ACC)/1000);
IF TempoTotal <> 0 THEN
	PorcentLavagem := ((TempoAtual)/(TempoTotal)) * 100;
END_IF


// Instância dos timers
TON1_Lavagem(IN:= LigaBombaCW, PT:= DINT_TO_TIME(Config.TempoDeCiclo)*1000, Q=> , ET=> ); 
TON2_Lavagem(IN:= LigaBombaCCW, PT:= DINT_TO_TIME(Config.TempoDeCiclo)*1000, Q=> , ET=> );
TON3_Lavagem(IN:= , PT:= T#1S, Q=> , ET=> ); //Tempo entre a reversão das bombas
TON4_Lavagem(IN:= , PT:= T#5S, Q=> , ET=> ); //Timer de finalização da lavagem
TON5_Lavagem(IN:= , PT:= T#10S, Q=> , ET=> );	//Temporizador para esperar as válvulas posicionarem
TON6_Lavagem(IN:= (SwitchCase >= 10 AND SwitchCase < 42), PT:= REAL_TO_TIME(TempoTotal * 1000), Q=> , ET=> );	//Tempo total da lavagem
TONR6_Lavagem(
	EN:= (SwitchCase >= 10 AND SwitchCase <= 42) AND NOT TON5_Lavagem.IN, 
	PRE:= REAL_TO_TIME(TempoTotal * 1000), 
	RES:= TONR6_Lavagem.DN OR SwitchCase = 0, 
	DN=> , 
	ACC=> , 
	TT=> );


//Verifica condições para iniciar lavagem
IF Status = 3 AND IniciaLavagem AND NOT ParaLavagem AND AtivaBloco THEN
	IniciaLavagem := FALSE;
	IF Config.LavAguaUsada = 0 THEN
		SwitchCase := 30;
	ELSE
		SwitchCase := 10;
	END_IF
END_IF

//Para a lavagem
IF (ParaLavagem AND AtivaBloco) THEN //Deve ter o AtivaBLoco para que só a linha selecionada pare de lavar
	SwitchCase := 0;
	ParaLavagem := FALSE;
	HMI.PararLavagem := FALSE;
	TON5_Lavagem.IN := FALSE;	//Reseta falha no posicionamento das válvulas
END_IF

//Se a linha estiver sendo lavada e o bloco é desativado, a bomba deve retornar o material antes de parar
IF Lavando AND NOT AtivaBloco AND SwitchCase < 31 AND SwitchCase <> 0 THEN
	IniciaLavagem := False;
	SwitchCase := 31;
END_IF

CASE SwitchCase OF
	
	0:	//Sistema parado
		AguaLimpa := FALSE;
		AguaResid := FALSE;
		LigaBombaCW := FALSE;
		LigaBombaCCW := FALSE;
		QntLavResid := 0;
		QntLavLimpa := 0;
		Lavando := FALSE;
		IniciaLavagem := FALSE;
		
	10: //Inicia a lavagem com água residual
		Abre_V1 := TRUE;
		Abre_V2 := TRUE;
		Abre_V3 := FALSE;
		AguaLimpa := FALSE;
		AguaResid := TRUE; 
		Lavando := TRUE;
		
		//Verifica se todas as válvulas abriram
		IF Status_V1 = 2 AND Status_V2 = 2 AND Status_V3 = 1 AND Status_ValvAguaResid = 2 THEN
			LigaBombaCW := TRUE;
			LigaBombaCCW :=  FALSE;
			TON5_Lavagem.IN := FALSE;
		ELSE
			stStatus := 'AGUARDANDO VÁLVULAS POSICIONAREM';
			TON5_Lavagem.IN := TRUE;
			IF TON5_Lavagem.Q THEN
				SwitchCase := 0;
			END_IF
		END_IF
		
		IF TON1_Lavagem.Q THEN
			SwitchCase := 11;
		END_IF
		
	11: TON3_Lavagem.IN := TRUE;		//Bloco de espera para a reversão do motor
		LigaBombaCW := FALSE;
		LigaBombaCCW :=  FALSE;
		IF TON3_Lavagem.Q THEN
			SwitchCase := 20;
			TON3_Lavagem.IN := FALSE;
		END_IF
		
	20: //Giro reverso
		LigaBombaCW := FALSE;
		LigaBombaCCW :=  TRUE;
		
		IF TON2_Lavagem.Q THEN
			QntLavResid := QntLavResid + 1;
			IF QntLavResid < Config.LavAguaUsada THEN
				SwitchCase := 21;
			ELSE
				SwitchCase := 22;
			END_IF
		END_IF
		
	21: TON3_Lavagem.IN	:= TRUE;		//Bloco de espera para a reversão do motor
		LigaBombaCW		:= FALSE;
		LigaBombaCCW 	:=  FALSE;
		IF TON3_Lavagem.Q THEN
			SwitchCase := 10;
			TON3_Lavagem.IN := FALSE;
		END_IF
		
	22: TON3_Lavagem.IN := TRUE;		//Bloco de espera para a reversão do motor
		LigaBombaCW 	:= FALSE;
		LigaBombaCCW 	:=  FALSE;
		IF TON3_Lavagem.Q THEN
			SwitchCase := 30;
			TON3_Lavagem.IN := FALSE;
		END_IF
		
	30: Abre_V1 := TRUE;
		Abre_V2 := FALSE;
		Abre_V3 := FALSE;
		AguaLimpa := TRUE;
		AguaResid := FALSE;
		Lavando := TRUE;
		
		IF Status_V1 = 2 AND Status_V2 = 1 AND Status_V3 = 1 AND Status_ValvAguaLimpa = 2 THEN
			LigaBombaCW := TRUE;
			LigaBombaCCW :=  FALSE;
			TON5_Lavagem.IN := FALSE;
		ELSE
			stStatus := 'AGUARDANDO POSICIONAMENTO DAS VÁLVULAS';
			TON5_Lavagem.IN := TRUE;
			IF TON5_Lavagem.Q THEN
				SwitchCase := 0;
			END_IF
		END_IF
		
		IF TON1_Lavagem.Q THEN
			SwitchCase := 31;
			Abre_V2 := TRUE;
			Abre_V3 := FALSE;
			Abre_V4 := TRUE;
			AguaLimpa := FALSE;
			AguaResid := TRUE;
		END_IF
	
	31: TON3_Lavagem.IN := TRUE;		//Bloco de espera para a reversão do motor
		LigaBombaCW := FALSE;
		LigaBombaCCW :=  FALSE;
		IF TON3_Lavagem.Q THEN
			SwitchCase := 40;
			TON3_Lavagem.IN := FALSE;
		END_IF
		
	40: LigaBombaCW := FALSE;	//A água limpa, deve retornar para o recipiente de água residual
		LigaBombaCCW :=  TRUE;
		
		
		IF TON2_Lavagem.Q THEN
			QntLavLimpa := QntLavLimpa + 1;
			IF (QntLavLimpa < Config.LavAguaLimpa) AND AtivaBloco THEN
				SwitchCase := 41;
				Abre_V1 := TRUE;
				Abre_V2 := FALSE;
				Abre_V3 := FALSE;
				AguaLimpa := TRUE;
				AguaResid := FALSE;
			ELSE
				SwitchCase := 42;
			END_IF
			IF NOT AtivaBloco THEN
				SwitchCase := 42;
			END_IF
		END_IF
		
	41: TON3_Lavagem.IN := TRUE;		//Bloco de espera para a reversão do motor
		LigaBombaCW := FALSE;
		LigaBombaCCW :=  FALSE;
		IF TON3_Lavagem.Q THEN
			SwitchCase := 30;
			TON3_Lavagem.IN := FALSE;
		END_IF
		
	42: TON4_Lavagem.IN := TRUE; // Finalização da lavagem
		UltimaLavagem := DT_TO_UDINT(MAIN.HoraAtual);	//Verifica a hora que a ultima lavagem foi feita
		Liquidos.UltimoAlrLavagem[Linha] := DT_TO_LINT(MAIN.HoraAtual);
		Abre_V1 := FALSE;
		Abre_V2 := FALSE;
		Abre_V3 := FALSE;
		Abre_V4 := FALSE;
		IF TON4_Lavagem.Q THEN
			SwitchCase := 0;
			TON4_Lavagem.IN := FALSE;
			IniciaLavagem := FALSE;
		END_IF
		
	
END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="Lavagem">
      <LineId Id="803" Count="0" />
      <LineId Id="810" Count="0" />
      <LineId Id="809" Count="0" />
      <LineId Id="863" Count="0" />
      <LineId Id="806" Count="2" />
      <LineId Id="804" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="367" Count="0" />
      <LineId Id="385" Count="0" />
      <LineId Id="368" Count="1" />
      <LineId Id="386" Count="0" />
      <LineId Id="370" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="387" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="388" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="389" Count="0" />
      <LineId Id="204" Count="1" />
      <LineId Id="390" Count="0" />
      <LineId Id="206" Count="1" />
      <LineId Id="391" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="325" Count="0" />
      <LineId Id="559" Count="0" />
      <LineId Id="558" Count="0" />
      <LineId Id="560" Count="0" />
      <LineId Id="564" Count="3" />
      <LineId Id="561" Count="0" />
      <LineId Id="111" Count="2" />
      <LineId Id="110" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="395" Count="0" />
      <LineId Id="563" Count="0" />
      <LineId Id="692" Count="5" />
      <LineId Id="686" Count="0" />
      <LineId Id="690" Count="0" />
      <LineId Id="679" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="48" Count="0" />
      <LineId Id="508" Count="2" />
      <LineId Id="512" Count="1" />
      <LineId Id="511" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="115" Count="1" />
      <LineId Id="372" Count="0" />
      <LineId Id="507" Count="0" />
      <LineId Id="414" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="617" Count="0" />
      <LineId Id="616" Count="0" />
      <LineId Id="618" Count="0" />
      <LineId Id="630" Count="0" />
      <LineId Id="619" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="918" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="919" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="506" Count="0" />
      <LineId Id="631" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="920" Count="0" />
      <LineId Id="71" Count="1" />
      <LineId Id="98" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="505" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="60" Count="1" />
      <LineId Id="250" Count="0" />
      <LineId Id="399" Count="0" />
      <LineId Id="392" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="393" Count="0" />
      <LineId Id="396" Count="2" />
      <LineId Id="62" Count="0" />
      <LineId Id="81" Count="3" />
      <LineId Id="128" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="136" Count="1" />
      <LineId Id="125" Count="1" />
      <LineId Id="134" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="921" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="107" Count="2" />
      <LineId Id="100" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="138" Count="1" />
      <LineId Id="131" Count="2" />
      <LineId Id="135" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="189" Count="5" />
      <LineId Id="188" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="2" />
      <LineId Id="146" Count="0" />
      <LineId Id="515" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="154" Count="2" />
      <LineId Id="407" Count="0" />
      <LineId Id="401" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="403" Count="2" />
      <LineId Id="402" Count="0" />
      <LineId Id="157" Count="3" />
      <LineId Id="374" Count="3" />
      <LineId Id="373" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="162" Count="5" />
      <LineId Id="161" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="170" Count="1" />
      <LineId Id="362" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="623" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="379" Count="3" />
      <LineId Id="378" Count="0" />
      <LineId Id="177" Count="1" />
      <LineId Id="627" Count="2" />
      <LineId Id="179" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="180" Count="0" />
      <LineId Id="182" Count="5" />
      <LineId Id="181" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="747" Count="0" />
      <LineId Id="864" Count="0" />
      <LineId Id="456" Count="1" />
      <LineId Id="460" Count="0" />
      <LineId Id="462" Count="0" />
      <LineId Id="199" Count="1" />
      <LineId Id="202" Count="1" />
      <LineId Id="201" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="56" Count="0" />
      <LineId Id="38" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>